--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
+/* ===GRID LAYOUT=== */
 body { 
 	display: grid; 
-	grid-template-columns: 1fr 1.5fr 1fr; 
+	grid-template-columns: 1fr 1fr 1fr; 
 	grid-template-rows: 1fr 1.5fr 1fr 1fr; 
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
-	min-height: 98vh;
+	min-height: 100vh;
 	overflow: hidden;
 	min-width: 980px;
 	width: 100%;
@@ -12,17 +13,20 @@ body {
 
 .top-left { 
 	grid-area: 1 / 1 / 2 / 2;
+	padding-top: 20px;
 } 
+
 .top-right {
 	grid-area: 1 / 3 / 2 / 4;
 	place-self: start end;
-	padding-right: 20px;
+	padding: 20px 20px 0px 0px;
 } 
+
 .center-me {
 	grid-area: 2 / 2 / 3 / 3;
-	align-self: center;
-	margin: auto;
+	place-self: start center;
 } 
+
 .footer {
 	grid-area: 4 / 1 / 5 / 4;
 	align-self: end;
@@ -30,26 +34,122 @@ body {
 	grid-template-columns: 1fr 1fr 1fr;
 	background-color: #f2f2f2;
 	padding: 20px;
-	margin: 0px -10px -20px -10px;
+	border: solid 1px #dfe1e5;
 } 
 
-.text {
-	color: rgba(0,0,0,0.69);
-	text-decoration: none;
-	font-weight: ;
+/* ===HEADING FORMATTING=== */
+.about, .store {
+	margin-left: 20px;
 }
 
+.gmail, .images, .squares, .sign-in {
+	margin-right: 20px;
+}
+
+.sign-in {
+	padding: 4px 18px;
+	line-height: 28px;
+	font-size: 14px;
+	font-weight: bold;
+	color: #ffffff;
+	background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+	border: solid 1px #4285f4;
+	border-radius: 3px;
+}
+
+
+/* ===TEXT FORMATTING=== */
+.text {
+	color: rgba(0,0,0,0.87);
+	text-decoration: none;
+	font-size: 14px;
+	font-family: arial,sans-serif;
+}
+
+.bottom-text {
+	color: #5f6368;
+	text-decoration: none;
+	font-size: 14px;
+	font-family: arial,sans-serif;
+}
+
+.text:hover, .bottom-text:hover {
+	text-decoration: underline;
+}
+
+/* ===MAIN INTERFACE FORMATTING=== */
+#google {
+	margin: 0px 0px 35px 110px;
+}
+
+/* ---Search Bar Formatting--- */
+
+/* >>>Search bar visuals<<< */
+.search {
+	border: 1px solid #dfe1e5;
+	border-radius: 24px;
+	height: 48px;
+	width: 482px;
+}
+
+.search:hover {
+	border: 1px solid transparent;
+	box-shadow: 0px 0px 6px 1px rgba(189, 189, 189, 1);
+}
+
+.microphone {
+	width: 16px;
+	float: right;
+	margin: 143px 22px 0px 0px;
+}
+
+/* >>>Search bar input<<< */
+#search-bar {
+	font-size: 16px;
+	border: none;
+	height: 24px;
+	width: 400px;
+	margin: 9px 0px 0px 15px;
+	background-color: transparent;
+	outline: none;
+}
+
+/* ---Button Formatting--- */
+.buttons {
+	padding-top: 30px;
+	margin-left: 90px;
+}
+
+#search-button, #lucky-button {
+	background-color: #f2f2f2;
+	color: #5f6368;
+	font-size: 14px;
+	padding: 11px 18px;
+	border-radius: 4px;
+	border: 1px solid #f2f2f2;
+	margin: 5px;
+}
+
+#search-button:hover, #lucky-button:hover {
+	color: rgba(0,0,0,0.87);
+	border: 1px solid #dfe1e5;
+}
+
+/* ===FOOTER FORMATTING=== */
 .bottom-right {
 	grid-area: 1 / 3;
 	place-self: end end;
 }
 
-.text:hover {
-	text-decoration: underline;
+.bottom-left {
+	grid-area: 1 / 1;
+	place-self: start start;
 }
 
-#squares {
-	height: 25px;
-	width: 25px;
-	opacity: .69;
+.advertising, .business, .how {
+	margin-left: 20px;
+}
+
+ .privacy, .terms, .settings {
+ 	margin-right: 20px;
 }
